tests/error/__FUNCTION__outside_function.c
// fail "__FUNCTION__ is only allowed inside a function."

int a = __FUNCTION__;
